<package format="2">
<name>kitti_stereo_odo</name>
<version>0.0.0</version>
<description>kitti_stereo_odo</description>
<maintainer email="roy6669049@gmail.com">Roy Zhang</maintainer>
<license>xx</license>
<buildtool_depend>catkin</buildtool_depend>
<depend>roscpp</depend>
<depend>message_filters</depend>
</package>
